<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/layout_aerobico">
  <ScrollView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1">
    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" >
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp">
        
	        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">     
		        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Duracao" />
		        <TextView android:text="00" android:id="@+id/exer_aero_display_duracao" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="50sp"/>	
		    </LinearLayout>
			
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp">
        
        	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" >
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Distancia" />
			    	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
			       		<TextView android:text="00" android:id="@+id/exer_aero_display_distancia" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="50sp"/>
			            <TextView android:text="@string/Km" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="30sp" android:gravity="bottom"/>
			        </LinearLayout>
			</LinearLayout>
			
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="right" android:layout_marginLeft="35dp">
		        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Calorias" />
		         <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
		        	<TextView android:text="00" android:id="@+id/exer_aero_display_caloria" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="50sp"/>
		            <TextView android:text="@string/Kcal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="30sp" android:gravity="bottom"/>
		         </LinearLayout>
		    </LinearLayout>
			
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp">
        
        	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1">
	        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Velocidade" />
	         		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
	       	 			<TextView android:text="00" android:id="@+id/exer_aero_display_velocidade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="50sp"/>
	         			<TextView android:text="@string/Km_h" android:textSize="30sp" android:layout_height="fill_parent" android:layout_width="fill_parent" android:gravity="bottom"/>
	        		</LinearLayout>
	    	</LinearLayout>
	    	
	    	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginLeft="10dp">
	        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VelocidadeMedia" />
	         		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
	       	 			<TextView android:text="00" android:id="@+id/exer_aero_display_velocidade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="50sp"/>
	         			<TextView android:text="@string/Km_h" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textSize="30sp" android:gravity="bottom"/>
	        		</LinearLayout>
	    	</LinearLayout>
	    	
        </TableRow>
    </TableLayout>
        </ScrollView>
    <Button android:text="@string/Mostrar_mapa" android:id="@+id/exer_aero_btn_mapa" android:layout_width="fill_parent" android:layout_height="70dp" android:layout_margin="5dp" android:textSize="20sp" android:gravity="center" />
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center|bottom" android:layout_marginBottom="3dp">
        <Button android:text="@string/Iniciar" android:id="@+id/exer_aero_btn_iniciar" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1" android:textSize="15sp"/>
        <Button android:text="@string/Parar" android:id="@+id/exer_aero_btn_parar" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1" android:textSize="15sp"/>
    </LinearLayout>
   
</LinearLayout>
