<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            style="?textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercicio_nome" >
        </TextView>

        <EditText
            android:id="@+id/exercicio_nome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <requestFocus >
            </requestFocus>
        </EditText>

        <TextView
            style="?textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercicio_Musculo_pri" >
        </TextView>

        <Spinner
            android:id="@+id/exercicio_musc_pri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </Spinner>

        <TextView
            style="?textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercicio_tipo" >
        </TextView>

        <Spinner
            android:id="@+id/exercicio_tipo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </Spinner>

        <TextView
            style="?textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercicio_Musculo_sec" >
        </TextView>

        <Button
            android:id="@+id/btn_exercicio_add_mus_sec"
            style="@style/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Exercicio_adicionar_musc_sec" >
        </Button>

        <TextView
            android:id="@+id/tv_indice_calorico"
            style="?textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercicio_indicecalorico" >
        </TextView>

        <EditText
            android:id="@+id/exercicio_indicecalorico"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="decimal" >
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_exercicio_salvar"
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salvar" >
            </Button>

            <Button
                android:id="@+id/btn_exercicio_cancelar"
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>