<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" style="?whiteBackground">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="left" android:layout_margin="5dp">
		<LinearLayout android:layout_width="120dp"
			android:padding="5dp" android:layout_height="170dp"
			android:orientation="vertical" android:gravity="center"
			android:background="#FFFFFF">
			<ImageView android:src="@drawable/logo_fitness"
				android:layout_marginTop="50dp" style="@style/default_wrap_content"></ImageView>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_margin="5dp">
			<TextView android:text="Nome:" style="?textTitle"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<TextView android:text="Idade:" style="?textTitle"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_margin="10dp">
			<Button android:id="@+id/btn_main_estatistica" style="?button"
				android:layout_marginTop="108dp" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="Estatisticas" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="5dip" android:orientation="vertical"
		android:background="@drawable/fundo_labels_trajeto"
		android:layout_margin="5dp" />


	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:layout_weight="1">
		<TableLayout android:layout_alignParentBottom="true"
			style="@style/default_wrap_content">
			<TableRow android:layout_marginBottom="20dip">
				<Button android:id="@+id/btn_main_programa" style="?button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/programa"></Button>
				<Button android:id="@+id/btn_main_exercicio" style="?button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/exercicio" android:layout_marginLeft="8dp"></Button>
			</TableRow>
			<TableRow>
				<Button android:id="@+id/btn_main_medidas" style="?button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/Medidas"></Button>
				<Button android:id="@+id/btn_main_conf" style="?button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/Configuracao" android:layout_marginLeft="8dp"></Button>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>
